fixed dark mode for About section to accurately change colors. Added beginning of Skills section.

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -3,6 +3,12 @@
     width: 100vw;
     margin: 0 auto;
     overflow: hidden;
+    transition: 0.5s;
+}
+
+.dark .about{
+    background: #222;
+    color: #fff;
 }
 
 .aboutContent{
